wp/wp-be-Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-be
  namespace: wp-be
  labels:
    app: wp-be
spec:
  ports:
    - port: 80
      targetport: 8080
      protocol: TCP
      name: http
  selector:
    app: wp-be
    tier: frontend
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wp-be
  namespace: wp-be
  labels:
    app: wp-be
    tier: frontend
spec:
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: wp
        tier: frontend
    spec:
      containers:
      - image: chepurko/wordpress-fpm-redis
        name: wp
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
      - image: nginx:1.10
        name: wp-nginx
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
        - name: nginx-config
          mountPath: /etc/nginx
      volumes:
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-be-pv-claim
      - name: nginx-config
        configMap:
          name: nginx-config
