wp/wp-wd-Deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-wd
  namespace: wp-wd
  labels:
    app: wp-wd
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: wp-wd
    tier: frontend
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wp-wd
  namespace: wp-wd
  labels:
    app: wp-wd
    tier: frontend
spec:
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: wp-nginx
        app: wp-wd
        tier: frontend
    spec:
      containers:
      - image: chepurko/wordpress-fpm-redis
        name: wp-fpm
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
      - image: chepurko/nginx-fpm
        name: nginx-fpm
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-wd-pv-claim
