wp/notls-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-wd
  namespace: wp-wd
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "wpclust-ingress"
spec:
  # tls:
  # - hosts:
  #   - www.wingdings.com
  #   secretName: wp-wd-tls
  rules:
  - host: www.wingdings.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-wd
          servicePort: 80
