wp/tls-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-be
  namespace: wp-be
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.broadwayexportcorp.com
    secretName: wp-be-tls
  rules:
  - host: www.broadwayexportcorp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wp-be
          servicePort: 80
